latest AI updates'

--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
     28. git remote add origin https://github.com/Pawel-K81/AI.git     dodaje zdalne repozytorium
     29. git push origin master        it push all the changes to Gigit, always at the end you have to put the Branch name to which you push the changes
     30. git pull origin master    this command will download all the changes 
+    31. git remote set-url origin https://github.com/Patka13/AI-AA.git      zmienia adres zdalny repozytorium na github
+    32. git remote -v    checking setup of remote github repository
+    33. 
 
 </body>
