moved .gitignore file to prod

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     30. git pull origin master    this command will download all the changes 
     31. git remote set-url origin https://github.com/Patka13/AI-AA.git      zmienia adres zdalny repozytorium na github
     32. git remote -v    checking setup of remote github repository
-    33. m
+    33. git branch "name of the branch"   to create branch
+    34. git checkout "name of the Branch" allowes you to switch to the Branch
+    35. git branch    shows all available branches
+    36. git checkout -b "name of new branch"   creates in one command new branch and switch to it at once
+    37. git branch -D "name of the branch" it will delete the branch 
 
 </body>
