--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     35. git branch    shows all available branches
     36. git checkout -b "name of new branch"   creates in one command new branch and switch to it at once
     37. git branch -D "name of the branch" it will delete the branch
-    38. mkdir, cp, mv, uwaga na mv ..
-    39. 
+    38. mkdir, cp, mv, cd, git adduwaga na mv ..
+    39. git pull origin "name of the branch"   ściąga utworzony na GH branch
+    40. git checkout --track origin/"name of the branch on GH" it set up to track remote branch from GH to your computer
+    41. git push origin --delete "name of the branch"  to delete branch remotly from GIT BAsh
 
 </body>
