added new commands on index

--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
     39. git pull origin "name of the branch"   ściąga utworzony na GH branch
     40. git checkout --track origin/"name of the branch on GH" it set up to track remote branch from GH to your computer
     41. git push origin --delete "name of the branch"  to delete branch remotly from GIT BAsh
+    42. git commit -am "it already add and commit changes"
+    43. git merge "dev - name of a merged branch"   command ot merge changes on branch
+
 
 </body>
