added rebase commands to html file

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     41. git push origin --delete "name of the branch"  to delete branch remotly from GIT BAsh
     42. git commit -am "it already add and commit changes"
     43. git merge "dev - name of a merged branch"   command ot merge changes on branch it's a fast worward merge
+    44. git merge --abort  - it aborts merging branches
+    45. git reset --hard 'id of commit' -it resets a commits to the commit in the past
+    46. git rebase master  -it rebase the whole branch to the current version of pointed branch
 
 
 </body>
