--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     44. git merge --abort  - it aborts merging branches
     45. git reset --hard 'id of commit' -it resets a commits to the commit in the past
     46. git rebase master  -it rebase the whole branch to the current version of pointed branch
+    47. git clone "url link to the github repository"    this command allowes you to clone the repository from githun
 
 
 </body>
