--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     45. git reset --hard 'id of commit' -it resets a commits to the commit in the past
     46. git rebase master  -it rebase the whole branch to the current version of pointed branch
     47. git clone "url link to the github repository"    this command allowes you to clone the repository from githun
+    48. ls - list files
+    49. git rm --cached clone/AI-AA     pozbywanie się sklonowanego repozytorium jeśli nie chcemy do niego dodawać commitów
+    50. git rm --cached clone/AI-AA -f    forced remove if something was updated on the way
+    
 
 
 </body>
