added info regarding bitbusket repo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     48. ls - list files
     49. git rm --cached clone/AI-AA     pozbywanie się sklonowanego repozytorium jeśli nie chcemy do niego dodawać commitów
     50. git rm --cached clone/AI-AA -f    forced remove if something was updated on the way
-    
+    51. Bitbusket repository https://kwiatkowskip@bitbucket.org/kwiatkowskip/ai-assistant.git
 
 
 </body>
