--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     28. git remote add origin https://github.com/Pawel-K81/AI.git     dodaje zdalne repozytorium
     29. git push origin master        it push all the changes to Gigit, always at the end you have to put the Branch name to which you push the changes
     30. git pull origin master    this command will download all the changes 
-    31. git remote set-url origin https://github.com/Patka13/AI-AA.git      zmienia adres zdalny repozytorium na github
+    31. git remote set-url origin        zmienia adres zdalny repozytorium na github
     32. git remote -v    checking setup of remote github repository
     33. git branch "name of the branch"   to create branch
     34. git checkout "name of the Branch" allowes you to switch to the Branch
@@ -50,6 +50,7 @@
     49. git rm --cached clone/AI-AA     pozbywanie się sklonowanego repozytorium jeśli nie chcemy do niego dodawać commitów
     50. git rm --cached clone/AI-AA -f    forced remove if something was updated on the way
     51. Bitbusket repository https://kwiatkowskip@bitbucket.org/kwiatkowskip/ai-assistant.git
-
+<q></q>
 
 </body>
+
